crates/sentry-source-nginx/tests/snapshots/snapshots__sqli.snap
---
source: crates/sentry-source-nginx/tests/snapshots.rs
expression: summary
---
fixture: sqli
line:    198.51.100.23 - - [10/Jan/2026:13:55:37 +0000] "GET /login?user=admin'+OR+1=1-- HTTP/1.1" 200 56 "-" "Mozilla/5.0"
method:  Some(Get)
path:    /login
query:   user=admin'+OR+1=1--
status:  200
ua:      Mozilla/5.0
score:   68
level:   HIGH
verdict: Challenge
rule:    -
signals: [sql_injection, unknown_route]
