crates/sentry-source-nginx/tests/snapshots/snapshots__xss.snap
---
source: crates/sentry-source-nginx/tests/snapshots.rs
expression: summary
---
fixture: xss
line:    198.51.100.24 - - [10/Jan/2026:13:55:38 +0000] "GET /search?q=<script>alert(1)</script> HTTP/1.1" 200 42 "-" "Mozilla/5.0"
method:  Some(Get)
path:    /search
query:   q=<script>alert(1)</script>
status:  200
ua:      Mozilla/5.0
score:   53
level:   HIGH
verdict: Challenge
rule:    -
signals: [unknown_route, xss]
